[tool.poetry]
name = "login-flask-login"
version = "0.1.0"
description = ""
authors = ["wellingtonsilva04 <wel.dss@gmail.com>"]
license = "Mit"
readme = "README.md"
packages = [{include = "login_flask_login"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
blue = "*"
mypy = "*"
pip-audit = "*"
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = ["A003"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S"]
